service-mesh/deploy/txn/txn-deploy.yaml
# this file for deployment txn
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: txn
  labels:
    app: txn
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: txn
    spec:
      containers:
      - name: txn
        image: tnindo/txn:v1stag.0.159
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /go/src/txn/logs
          name: txn-logs
      restartPolicy: Always
      volumes:
      - name: txn-logs
        hostPath:
          path: /data/saving_txn/logs
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: txn
  labels:
    app: txn
spec:
  ports:
  -  port: 8084
     targetPort: 8084
     nodePort: 30004
     name: app
  - port: 58084
    targetPort: 58084
    nodePort: 32104
    name: grpc
  type: LoadBalancer
  selector:
    app: txn
